<resources>
    <string name="app_name">HaHabit</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_add">Añadir</string>
    <string name="title_tracker">Tracker</string>
    <string name="title">Titulo</string>
    <string name="time">Tiempo</string>
    <string name="frequency">Frecuencia</string>
    <string name="a" translatable="false">A</string>
    <string name="list">Lista</string>
    <string name="standard">Estandar</string>
    <string name="timer">Temporizador</string>
    <string name="type">Tipo</string>
    <string name="area">Area</string>
    <string name="add_a_title">Añade un título...</string>
    <string name="cooking">Cocina</string>
    <string name="study">Estudio</string>
    <string name="sports">Deportes</string>
    <string name="others">Otros</string>
    <string name="weekly">Semanal</string>
    <string name="every_other_day">Elegir intervalo de dias</string>
    <string name="add_habbit">Añadir hábito</string>
    <string name="add_a_time">Añade una hora...</string>
    <string name="selecciona_los_dias">Selecciona los días:</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="x">X</string>
    <string name="j">J</string>
    <string name="v">V</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="repetir_cada">Repetir cada:</string>
    <string name="ej_3">Ej: 3</string>
    <string name="dia">día</string>
    <string name="dias">días</string>
    <string name="seguido">seguido</string>
    <string name="enable_reminder">Activar recordatorio</string>
    <string name="duracion_del_temporizador">Duración del temporizador</string>
    <string name="horas">horas</string>
    <string name="ejemplo_temporizador" translatable="false">00</string>
    <string name="min">min</string>
    <string name="seg">seg</string>
    <string name="semana_anterior">Semana anterior</string>
    <string name="semana_siguiente">Semana siguiente</string>
    <string name="mis_habitos">Mis Hábitos</string>
    <string name="completados">Completados</string>
    <string name="diana" translatable="false">🎯</string>
    <string name="no_tienes_habitos_para_hoy">No tienes hábitos para hoy</string>
    <string name="selecciona_otro_dia_o_anyade_nuevos_habitos">Selecciona otro día o añade nuevos hábitos</string>
    <string name="ejemplo_dias_activo" translatable="false">0</string>
    <string name="dias_activos">Días activos</string>
    <string name="mejor_racha">Mejor racha</string>
    <string name="_2_dias_seguidos">2 días seguidos</string>
    <string name="eliminar_habito">Eliminar hábito</string>
    <string name="anyadir_item">+ Añadir item</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="iniciar_pausar_temporizador">Iniciar/Pausar temporizador</string>
    <string name="escribe_un_item">Escribe un item...</string>
    <string name="eliminar_item">Eliminar item</string>
    <string name="felicitacion">¡Enhorabuena! Llevas</string>
    <string name="dias_seguidos">días seguidos en el área</string>
    <string name="sigue_asi">Sigue así</string>
</resources>