<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="es.ucm.fdi.pad.hahabit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="es.ucm.fdi.pad.hahabit.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_tracker"
        android:name="es.ucm.fdi.pad.hahabit.ui.tracker.TrackerFragment"
        android:label="@string/title_tracker"
        tools:layout="@layout/fragment_tracker" />
</navigation>